--- a/main.html
+++ b/main.html
@@ -4,13 +4,49 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div class="container">
+  <h2>Carousel Example</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="first-slide">
+        <img src="./download.jpeg" alt="Los Angeles" style="width:100%;">
+      </div>
 
+      <div class="second-slide">
+        <img src="./download.jpeg" alt="Chicago" style="width:100%;">
+      </div>
+    
+      <div class="third-slide">
+        <img src="./download.jpeg" alt="New york" style="width:100%;">
+      </div>
+		  <div class="fourth-slide">
+        <img src="./download.jpeg" alt="New york" style="width:100%;">
+      </div>
+		  <div class="five-slide">
+        <img src="./download.jpeg" alt="New york" style="width:100%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
 </body>
 
 </html>
