--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
         <img src="./download.jpeg" alt="Chicago" style="width:100%;">
       </div>
     
-      <div class="third-slide">
+      <div class="third-slide active">
         <img src="./download.jpeg" alt="New york" style="width:100%;">
       </div>
 		  <div class="fourth-slide">
